# luna

./: .env.example  .gitignore  pyproject.toml
luna/: bentoml_service.py  discord_bot.py  serve_script.py  service.py  telegram_bot.py
luna/chitchat/: data_loader.py  inference.py  model.py  train.py  util.py
luna/config/: settings.py
luna/data/: products.json  qna_chitchat_friendly.tsv
luna/generator/: data_loader.py  inference.py  model.py  train.py  util.py
luna/intent_classifier/: data_loader.py  inference.py  label.py  model.py  train.py  util.py
luna/request_slots_classifier/: data_loader.py  inference.py  label.py  model.py  train.py  util.py
luna/response/: answer_request_slots.py  collect_user_preference.py  suggest_products.py
luna/runners/: chitchat.py  classifier.py  generator.py  slot_classifier.py
luna/slot_classifier/: data_loader.py  data_process.py  inference.py  label.py  model.py  slot_labels.py  train.py
scripts/: start_bentoml.sh
