[tool.poetry]
name = "luna"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.1.2%2Bcu121-cp310-cp310-win_amd64.whl" }
bentoml = "^1.1.11"
transformers = "^4.36.2"
spacy = "^3.7.2"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
pytorch-lightning = "^2.1.3"
seqeval = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
