[tool.poetry]
name = "luna"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bentoml = {extras = ["grpc"], version = "^1.1.11"}
transformers = "^4.36.2"
spacy = "^3.7.2"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
pytorch-lightning = "^2.1.3"
seqeval = "^1.2.2"
torch = "^2.1.2"
redis = "^5.0.1"
python-dotenv = "^1.0.0"
discord = "^2.3.2"
pydantic-settings = "^2.1.0"
python-telegram-bot = "^20.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "luna.serve_script:start"